images sur les pages menu

--- a/scss/pages/_menu-pages.scss
+++ b/scss/pages/_menu-pages.scss
@@ -142,7 +142,7 @@
 
 .image3 {
     background: url('../images/restaurants/delice.jpg');
-    background-size: cover;
+    background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
