--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -885,6 +885,18 @@ svg .heart {
   top: 3.9375rem;
   z-index: 0;
 }
+@media (min-width: 48em) {
+  .image1 {
+    height: 23.9375rem;
+    top: 6rem;
+  }
+}
+@media (min-width: 64em) {
+  .image1 {
+    height: 26.25rem;
+    top: 2.5rem;
+  }
+}
 
 .image2 {
   background: url("../images/restaurants/francaise.jpg");
@@ -897,10 +909,22 @@ svg .heart {
   top: 3.9375rem;
   z-index: 0;
 }
+@media (min-width: 48em) {
+  .image2 {
+    height: 23.9375rem;
+    top: 6rem;
+  }
+}
+@media (min-width: 64em) {
+  .image2 {
+    height: 26.25rem;
+    top: 2.5rem;
+  }
+}
 
 .image3 {
   background: url("../images/restaurants/delice.jpg");
-  background-size: cover;
+  background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
@@ -908,6 +932,18 @@ svg .heart {
   height: 17.1875rem;
   top: 3.9375rem;
   z-index: 0;
+}
+@media (min-width: 48em) {
+  .image3 {
+    height: 23.9375rem;
+    top: 6rem;
+  }
+}
+@media (min-width: 64em) {
+  .image3 {
+    height: 26.25rem;
+    top: 2.5rem;
+  }
 }
 
 .footer {
