--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -764,6 +764,27 @@ svg .heart {
   stroke: none;
 }
 
+/*----- L'image de fond -----*/
+.image {
+  position: absolute;
+  width: 100%;
+  height: 17.1875rem;
+  top: 3.9375rem;
+  z-index: 0;
+}
+@media (min-width: 48em) {
+  .image {
+    height: 21.25rem;
+    top: 1.9375rem;
+  }
+}
+@media (min-width: 64em) {
+  .image {
+    height: 29.4375rem;
+    top: 0;
+  }
+}
+
 /*----- Les Pages Menu -----*/
 .menuWrapper {
   display: flex;
@@ -773,10 +794,15 @@ svg .heart {
   position: absolute;
   width: 100%;
   height: 79.6875rem;
-  top: 19.6875rem;
+  top: 15.75rem;
   z-index: 10;
 }
 @media (min-width: 48em) {
+  .menuWrapper {
+    top: 20.6875rem;
+  }
+}
+@media (min-width: 64em) {
   .menuWrapper {
     top: 30.625rem;
   }
@@ -814,6 +840,7 @@ svg .heart {
   }
 }
 .menuWrapper__box--title {
+  position: relative;
   height: 1.6875rem;
   text-transform: uppercase;
   font-weight: 300;
@@ -822,8 +849,10 @@ svg .heart {
 }
 .menuWrapper__box--borderLeft {
   border-bottom: 0.1875rem solid var(--btn-green-light);
+  position: absolute;
+  top: 27px;
+  left: 0;
   width: 2.5rem;
-  margin-top: 0.375rem;
 }
 
 .background {
@@ -831,121 +860,44 @@ svg .heart {
   border-radius: 1.5625rem 1.5625rem 0 0;
   position: absolute;
   width: 100%;
-  max-width: 64rem;
+  max-width: 65.9375rem;
   height: 81.25rem;
-  top: 17.6875rem;
+  top: 13.75rem;
   z-index: 8;
 }
 @media (min-width: 48em) {
   .background {
-    top: 27.4375rem;
+    top: 18.25rem;
+    height: 78.125rem;
   }
 }
 @media (min-width: 64em) {
   .background {
-    top: 27.5rem;
-    left: calc(50% - 64rem / 2);
-    height: 76.5625rem;
-  }
-}
-
-.image {
-  background-color: var(--white);
-  background: url("../images/restaurants/palette.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  width: 100%;
-  height: 17.1875rem;
-  top: 3.9375rem;
-  z-index: 0;
-}
-@media (min-width: 48em) {
-  .image {
-    height: 23.9375rem;
-    top: 6rem;
-  }
-}
-@media (min-width: 64em) {
-  .image {
-    height: 26.25rem;
-    top: 2.5rem;
-  }
-}
-
-.image1 {
-  background: url("../images/restaurants/note.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  width: 100%;
-  height: 17.1875rem;
-  top: 3.9375rem;
-  z-index: 0;
-}
-@media (min-width: 48em) {
-  .image1 {
-    height: 23.9375rem;
-    top: 6rem;
-  }
-}
-@media (min-width: 64em) {
-  .image1 {
-    height: 26.25rem;
-    top: 2.5rem;
-  }
-}
-
-.image2 {
-  background: url("../images/restaurants/francaise.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  width: 100%;
-  height: 17.1875rem;
-  top: 3.9375rem;
-  z-index: 0;
-}
-@media (min-width: 48em) {
-  .image2 {
-    height: 23.9375rem;
-    top: 6rem;
-  }
-}
-@media (min-width: 64em) {
-  .image2 {
-    height: 26.25rem;
-    top: 2.5rem;
-  }
-}
-
-.image3 {
-  background: url("../images/restaurants/delice.jpg");
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  width: 100%;
-  height: 17.1875rem;
-  top: 3.9375rem;
-  z-index: 0;
-}
-@media (min-width: 48em) {
-  .image3 {
-    height: 23.9375rem;
-    top: 6rem;
-  }
-}
-@media (min-width: 64em) {
-  .image3 {
-    height: 26.25rem;
-    top: 2.5rem;
+    top: 27.375rem;
+    left: calc(50% - 65.9375rem / 2);
   }
 }
 
 .footer {
   width: 100%;
+}
+
+.palette_bg {
+  background: no-repeat center url("../images/restaurants/palette.jpg");
+  background-size: cover;
+}
+
+.note_bg {
+  background: no-repeat center url("../images/restaurants/note.jpg");
+  background-size: cover;
+}
+
+.francaise_bg {
+  background: no-repeat center url("../images/restaurants/francaise.jpg");
+  background-size: cover;
+}
+
+.delice_bg {
+  background: no-repeat center url("../images/restaurants/delice.jpg");
+  background-size: cover;
 }
