--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -666,6 +666,7 @@ body {
 }
 
 .menuCard {
+  background-color: var(--white);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -745,6 +746,22 @@ body {
 
 .uneven {
   animation: showCardUneven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+}
+
+.even1s {
+  animation: showCardEven 1s 0.2s cubic-bezier(0, 0.02, 0.28, 1.49);
+}
+
+.even2s {
+  animation: showCardEven 1s 0.4s cubic-bezier(0, 0.02, 0.28, 1.49);
+}
+
+.even3s {
+  animation: showCardEven 1s 0.6s cubic-bezier(0, 0.02, 0.28, 1.49);
+}
+
+.even4s {
+  animation: showCardEven 1s 0.8s cubic-bezier(0, 0.02, 0.28, 1.49);
 }
 
 /*----- Le Coeur Selectable -----*/
@@ -900,4 +917,110 @@ svg .heart {
 .delice_bg {
   background: no-repeat center url("../images/restaurants/delice.jpg");
   background-size: cover;
+}
+
+.confirmation-logo {
+  background: no-repeat center url("../images/logo/ohmyfood@2x.svg");
+  background-size: contain;
+  background-color: var(--btn-green-light);
+}
+
+/*----- L'image de fond -----*/
+.confimage {
+  width: 100%;
+  height: 17.1875rem;
+}
+@media (min-width: 48em) {
+  .confimage {
+    height: 21.25rem;
+  }
+}
+@media (min-width: 64em) {
+  .confimage {
+    height: 29.4375rem;
+  }
+}
+
+/*----- La confirmation -----*/
+.confirmWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  gap: 30px;
+  width: 100%;
+  height: 47.5rem;
+  top: 18.25rem;
+  z-index: 10;
+}
+@media (min-width: 48em) {
+  .confirmWrapper {
+    top: 23.8125rem;
+  }
+}
+@media (min-width: 64em) {
+  .confirmWrapper {
+    top: 30.625rem;
+  }
+}
+.confirmWrapper__title {
+  position: relative;
+}
+.confirmWrapper__title--titre {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.75rem;
+  line-height: 2.55125rem;
+  width: 21.3125rem;
+  height: 1.6875rem;
+}
+.confirmWrapper__box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 0.8125rem;
+  gap: 0.75rem;
+}
+@media (min-width: 48em) {
+  .confirmWrapper__box {
+    width: 39.625rem;
+  }
+}
+.confirmWrapper__box--title {
+  position: relative;
+  height: 1.6875rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  line-height: 1.171875rem;
+  width: 17.1875rem;
+}
+.confirmWrapper__box--borderLeft {
+  border-bottom: 0.1875rem solid var(--btn-purple-light);
+  position: absolute;
+  top: 27px;
+  left: 0;
+  width: 2.5rem;
+}
+
+.confirmation-bg {
+  background-color: var(--background-color);
+  border-radius: 1.5625rem 1.5625rem 0 0;
+  position: absolute;
+  width: 100%;
+  max-width: 65.9375rem;
+  height: 53.125rem;
+  top: 16.25rem;
+  z-index: 8;
+}
+@media (min-width: 48em) {
+  .confirmation-bg {
+    top: 21.375rem;
+    height: 46.875rem;
+  }
+}
+@media (min-width: 64em) {
+  .confirmation-bg {
+    top: 27.375rem;
+    left: calc(50% - 65.9375rem / 2);
+  }
 }
