--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -62,6 +62,7 @@
 } 
 
 .menuCard {
+    background-color: var(--white);
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -141,5 +142,25 @@
 
 .uneven {
     animation: showCardUneven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even1s {
+    animation: showCardEven 1s 0.2s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even2s {
+    animation: showCardEven 1s 0.4s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even3s {
+    animation: showCardEven 1s 0.6s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even4s {
+    animation: showCardEven 1s 0.8s cubic-bezier(0, 0.02, 0.28, 1.49);
 
 }
