--- a/scss/pages/_confirmation.scss
+++ b/scss/pages/_confirmation.scss
@@ -30,20 +30,10 @@
     top: u.rem(292);
     z-index: 10;
     @include u.breakpoint(medium) {
-        top: u.rem(381)
+        top: u.rem(341)
     }
     @include u.breakpoint(large) {
         top: u.rem(490)
-    }
-    &__title {
-        position: relative;
-        &--titre {
-            font-family: u.$font-roboto;
-            font-size: u.rem(28);
-            line-height: u.rem(40.82);
-            width: u.rem(341);
-            height: u.rem(27);
-        }
     }
     &__box {
         width: 100%;
@@ -74,6 +64,12 @@
     }
 }
 
+.menuCard__box--prix {
+    font-size: u.rem(15);
+    position: absolute;
+    right: u.rem(16);
+}
+
 .confirmation-bg {
     background-color: var(--background-color);
     border-radius: u.rem(25) u.rem(25) 0 0;
@@ -84,11 +80,31 @@
     top: u.rem(260);
     z-index: 8;
     @include u.breakpoint(medium) {
-        top: u.rem(342);
+        top: u.rem(292);
         height: u.rem(750);
     }
     @include u.breakpoint(large) {
         top: u.rem(438);
         left: calc(50% - u.rem(1055)/2);
     } 
+}
+
+.even1s {
+    animation: showCardEven 1s 0.2s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even2s {
+    animation: showCardEven 1s 0.4s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even3s {
+    animation: showCardEven 1s 0.6s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.even4s {
+    animation: showCardEven 1s 0.8s cubic-bezier(0, 0.02, 0.28, 1.49);
+
 }
