--- a/scss/pages/_confirmation.scss
+++ b/scss/pages/_confirmation.scss
@@ -2,7 +2,7 @@
 
 .confirmation-logo {
     background: no-repeat center url('../images/logo/ohmyfood@2x.svg');
-    background-size: contain;
+    background-size: 90%;
     background-color: var(--btn-green-light);
 }
 
@@ -65,6 +65,7 @@
 }
 
 .menuCard__box--prix {
+
     font-size: u.rem(15);
     position: absolute;
     right: u.rem(16);
@@ -76,7 +77,7 @@
     position: absolute;
     width: 100%;
     max-width: u.rem(1055);
-    height: u.rem(850);
+    height: u.rem(750);
     top: u.rem(260);
     z-index: 8;
     @include u.breakpoint(medium) {
