--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,7 @@ table {
   background-color: var(--white);
 }
 
-/* breakpoints small:375px, medium:700px, large:900px, xlarge:1440px */ /*----- Le Loader -----*/
+/*----- Le Loader -----*/
 @keyframes moveLetters {
   0% {
     transform: translateX(-7.5rem);
@@ -658,10 +658,15 @@ body {
   background-size: 1.375rem 1.3125rem;
 }
 
+/* .menuCard {
+    @include u.shadow(u.rem(4), u.rem(15), 0.1, u.rem(15));
+    transition: box-shadow 250ms ease-in;
+    &:hover {
+        @include u.shadow(u.rem(0), u.rem(30), 0.3, u.rem(15));
+    }*/
 .menuCard {
-  background-color: var(--white);
+  background-color: white;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   width: 100%;
   height: 4.3125rem;
@@ -669,41 +674,40 @@ body {
   overflow: hidden;
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.1);
   border-radius: 0.9375rem;
-  transition: box-shadow 250ms ease-in;
+  transition: box-shadow 250ms ease-out;
 }
 .menuCard:hover {
   box-shadow: 0 0rem 1.875rem 0 rgba(0, 0, 0, 0.3);
   border-radius: 0.9375rem;
 }
 .menuCard__box {
-  display: flex;
-  padding: 0.9375rem;
-  align-items: flex-end;
-  gap: 0.3125rem;
+  flex: 1;
+  min-width: 0;
 }
-.menuCard__box--text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  height: 2.625rem;
-  gap: 0.3125rem;
+.menuCard__box h4, .menuCard__box p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 0.9375rem;
 }
-.menuCard__box--text h4 {
+.menuCard__box h4 {
   font-family: "Roboto", sans-serif;
-  line-height: 1.318125rem;
+  line-height: 1.125rem;
+  font-weight: 500;
+  font-weight: normal;
 }
-.menuCard__box--text p {
+.menuCard__box p {
+  font-size: 0.9375rem;
   line-height: 1.101875rem;
   font-weight: 300;
-  font-size: 0.9375rem;
+  margin-top: 0.3125rem;
 }
-.menuCard__box--price {
-  display: flex;
-  align-items: flex-start;
-  font-size: 0.9375rem;
-  position: absolute;
-  right: 1rem;
+.menuCard__price {
+  line-height: 1.125rem;
+  font-weight: 700;
+  padding-top: 1.25rem;
+  padding-right: 0.84375rem;
+  white-space: nowrap;
   transition: margin-right 650ms ease-in-out;
 }
 .menuCard__selectBtn {
@@ -723,7 +727,7 @@ body {
   transform: rotate(360deg);
   transition: transform 650ms ease-in-out;
 }
-.menuCard:hover .menuCard__box--price {
+.menuCard:hover .menuCard__price {
   margin-right: 3.75rem;
 }
 .menuCard:hover .menuCard__selectBtn {
@@ -844,7 +848,7 @@ svg .heart {
 .menuWrapper__box--borderLeft {
   border-bottom: 0.1875rem solid var(--btn-green-light);
   position: absolute;
-  top: 27px;
+  top: 1.6875rem;
   left: 0;
   width: 2.5rem;
 }
@@ -924,7 +928,7 @@ svg .heart {
   flex-direction: column;
   align-items: center;
   position: absolute;
-  gap: 30px;
+  gap: 1.875rem;
   width: 100%;
   height: 47.5rem;
   top: 18.25rem;
@@ -964,7 +968,7 @@ svg .heart {
 .confirmWrapper__box--borderLeft {
   border-bottom: 0.1875rem solid var(--btn-purple-light);
   position: absolute;
-  top: 27px;
+  top: 1.6875rem;
   left: 0;
   width: 2.5rem;
 }
