--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -61,15 +61,8 @@
     }
 } 
 
-/* .menuCard {
-    @include u.shadow(u.rem(4), u.rem(15), 0.1, u.rem(15));
-    transition: box-shadow 250ms ease-in;
-    &:hover {
-        @include u.shadow(u.rem(0), u.rem(30), 0.3, u.rem(15));
-    }*/
-
 .menuCard {
-    background-color: white;
+    background-color: var(--white);
     display: flex;
     align-items: center;
     width: 100%;
@@ -112,7 +105,7 @@
         transition: margin-right 650ms ease-in-out;
     }
     &__selectBtn {
-        background-color: #99E2D0;
+        background-color: var(--btn-green-light);
         border-radius: 0 u.rem(16) u.rem(16) 0;
         position: absolute;
         width: u.rem(59);
