--- a/scss/pages/_confirmation.scss
+++ b/scss/pages/_confirmation.scss
@@ -24,9 +24,9 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    gap: u.rem(30);
+    gap: u.rem(15);
     width: 100%;
-    height: u.rem(760);
+    height: u.rem(500);
     top: u.rem(292);
     z-index: 10;
     @include u.breakpoint(medium) {
@@ -64,10 +64,10 @@
     }
 }
 
-.menuCard__box--prix {
-
+.menuCard__prix {
     font-size: u.rem(15);
     position: absolute;
+    top: u.rem(40);
     right: u.rem(16);
 }
 
@@ -77,12 +77,12 @@
     position: absolute;
     width: 100%;
     max-width: u.rem(1055);
-    height: u.rem(750);
+    height: u.rem(650);
     top: u.rem(260);
     z-index: 8;
     @include u.breakpoint(medium) {
         top: u.rem(292);
-        height: u.rem(750);
+        height: u.rem(650);
     }
     @include u.breakpoint(large) {
         top: u.rem(438);
