--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -10,7 +10,6 @@
     &:hover {
         transform: translateY(-0.2rem);
         box-shadow: u.rem(2) u.rem(3) u.rem(18) var(--btn-green-dark);
-        letter-spacing: u.rem(0.5);
     }
     &__img {
         object-fit: cover;
@@ -44,10 +43,11 @@
         bottom: u.rem(33);
         right: u.rem(25);
         background: url("../images/icon/heart.svg");
+        background-size: u.rem(22) u.rem(21);
         height: u.rem(21);
         width: u.rem(22);
+        transition: all 0.5s 0.1s ease-in-out;
         &:hover {
-            animation: animationHeart .5s linear forwards .35s;
             background: url("../images/icon/heart-like.svg");
             background-size: u.rem(22) u.rem(21);
         }
